# mcp-server

./: .gitignore  README.md  main.py  mcp_server.py  pyproject.toml  requirements.txt
.github/workflows/: python-test.yml
config/: settings.py
models/: deepseek_models.py
src/: main.py
src/models/: mcp_models.py
src/server/: mcp_server.py
src/services/: deepseek_service.py  langchain_service.py  rate_limiter.py
src/tools/: chat_tools.py
